	- revert addition of -H switch to firefox call, FC5's Firefox has no such switch
	  TiLP shouldn't been invoked through sudo anyway, if it is in Ubuntu, that's a packaging bug (kevin)
	- fixed bug with file selection (files was selected but never removed from selection)
	- removed local/full path option
	- fixed DnD to target folder
	- fixed skip/retry/cancel trap: doesn't catch ERR_ABORT

- 26/08/2006, version 0.23 (0.1.4, 0.2.6, 0.2.7, 0.0.5): roms
	- source code is frozen: entering in testing phase
	- check return value of all tifiles_xxxx calls into TiLP
	- reworked user boxes: use GTK standard ones instead
	- fixed 'Current Folder' button
		=> released on 28/08/2006.

- 22/08/2006, version 0.22 (0.1.3, 0.2.5, 0.2.6, 0.0.5): roms
	- added full TiGroup support (sending only)

- 06/08/2006, version 0.21 (0.1.3, 0.2.5, 0.2.4, 0.0.5): roms
	- sending app without dirlist make TiLP crash: fixed
	- re-enabled 'local/full path' option
	- added option allowing to select behaviour of backup (old: backup/group, new: TiGroup)
	- fixed possible conflict between FLASH token & FLASH folder
	- preload FLASH files like single/group files (consistency)
	- renamed/cleaned-up tilp_slct.c functions
	- del_var: increase timeout due to garbage collecting
	- fixed timeout in send_flash, send_tigroup and del_var
	- 'Ready' reopens SilverLink device like DirectLink (the only way to clear error)
	- reworked selection system so that selection contains FileEntry with only _one_ VarEntry. Needed for future skip/retry/cancel dialog box
	- implemented Skip/Retry/Cancel dialog box when sending file/apps
	- fixed bug: file can be selected several times
	- fixed T. Evans' bug: fix path with save dialog
	- fixed Unbuntu Bug #49256 (reported as bug #1513271)

- 18/07/2006, version 0.20 (0.1.3, 0.2.4, 0.2.2, 0.0.5): roms
	- use ticalcs_probe instead of the previous code (easier & clearer)
	- added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite (kevin)